@@ -1,8 +1,8 @@
 Package: EBSeq
 Type: Package
 Title:An R package for gene and isoform differential expression analysis of RNA-seq data 
-Version: 1.5.3
-Date: 2014-6-5
+Version: 1.5.4
+Date: 2014-9-4
 Author: Ning Leng, Christina Kendziorski
 Maintainer: Ning Leng <nleng@wisc.edu>
 Depends: blockmodeling, gplots, R (>= 3.0.0)
